--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G43-Multazam</title>
     <link rel="stylesheet" href="src/styles/stylesheet.css">
-
      <link rel="stylesheet" href="src/styles/responsive.css">
+    <link rel="icon" href="PATH/TO/favicon.ico" type="image/x-icon">
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
